Added travis support, updated README and setup.py script

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,17 @@ install:
   # install python package
   - python setup.py bdist_wheel
 
+# use postgresql version 10
+addons:
+  postgresql: "10"
+  apt:
+    packages:
+    - postgresql-10
+    - postgresql-client-10
+env:
+  global:
+  - PGPORT=5433
+
 # test cases with verbose output
 script:
   - python3 -m unittest discover credstuffer/test/ -v
